// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders LinkItemWidget unchanged 1`] = `
<div>
  <div
    class="memori-link-items"
  >
    <div
      class="memori-link-items--grid"
    >
      <div
        class="memori-link-item ease-out duration-500 delay-0 opacity-0 scale-95"
      >
        <a
          class="memori-link-item--link"
          href="https://memori.ai/en"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            class="memori-card memori-link-item--card memori-card--with-cover memori-card--hoverable"
          >
            <div
              class="memori-spin memori-spin--middle"
            >
              <div
                class="memori-spin--spinner"
              >
                <svg
                  aria-hidden="true"
                  class="memori-loading-icon"
                  focusable="false"
                  role="img"
                  viewBox="0 0 1024 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders LinkItemWidget unchanged with baseUrl 1`] = `
<div>
  <div
    class="memori-link-items"
  >
    <div
      class="memori-link-items--grid"
    >
      <div
        class="memori-link-item ease-out duration-500 delay-0 opacity-0 scale-95"
      >
        <a
          class="memori-link-item--link"
          href="https://memori.ai/en"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            class="memori-card memori-link-item--card memori-card--with-cover memori-card--hoverable"
          >
            <div
              class="memori-spin memori-spin--middle"
            >
              <div
                class="memori-spin--spinner"
              >
                <svg
                  aria-hidden="true"
                  class="memori-loading-icon"
                  focusable="false"
                  role="img"
                  viewBox="0 0 1024 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders LinkItemWidget unchanged with description oneline 1`] = `
<div>
  <div
    class="memori-link-items"
  >
    <div
      class="memori-link-items--grid"
    >
      <div
        class="memori-link-item ease-out duration-500 delay-0 opacity-0 scale-95"
      >
        <a
          class="memori-link-item--link"
          href="https://memori.ai/en"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            class="memori-card memori-link-item--card memori-link-item--card-description-oneline memori-card--with-cover memori-card--hoverable"
          >
            <div
              class="memori-spin memori-spin--middle"
            >
              <div
                class="memori-spin--spinner"
              >
                <svg
                  aria-hidden="true"
                  class="memori-loading-icon"
                  focusable="false"
                  role="img"
                  viewBox="0 0 1024 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders LinkItemWidget unchanged with no media 1`] = `
<div>
  <div
    class="memori-link-items"
  >
    <div
      class="memori-link-items--grid"
    />
  </div>
</div>
`;
